--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -181,19 +181,7 @@
 
 {% endblock %}
 
-{% block featured %}
-{% endblock %}
-
-{% block new_arrivals %}
-{% endblock %}
-
-{% block parallax_banner %}
-{% endblock %}
-
-{% block product_list %}
-{% endblock %}
-
-{% block lastest_articles %}
+{% block extra_content %}
 {% endblock %}
 
 
