--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,10 +1,8 @@
 {% extends "admin/base_site.html" %} 
 {% load staticfiles %}
 
-{% block header %}
-{% endblock %}
-{% block wrapper %}
-{% endblock %}
+{% block header %}{% endblock %}
+{% block wrapper %}{% endblock %}
 {% block bodyclass %}coming-soon{% endblock %}
 {% block login %}
 
