fix order list template, fix textarea width, small css fixes

--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -95,7 +95,7 @@
 
 
 
-{% block extra_content %}
+{% block extra_content__ %}
 <div class="container">
     <div class="twelve columns">
     	<div class="widget">
