--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -453,7 +453,7 @@ ul.top-bar-menu li:hover i {
 }
 
 .order-desc {
-    min-height: 200px
+    /*min-height: 200px*/
 }
 
 @media (max-width: 767px) {
@@ -701,13 +701,14 @@ ul.top-bar-menu li:hover i {
 
 .logo-image img {
     height: 150px!important;
-    width: 150px!important
+    width: 150px!important;
+    max-height: 100%;
 }
 
 textarea,
 .create_shop input[type="text"] {
     resize: none;
-    width: 90%
+    width: 100%;
 }
 
 input[type="number"] {
@@ -719,7 +720,7 @@ input[type="number"] {
     margin: 0;
     outline: none;
     padding: 10px 12px;
-    width: 75px
+    width: 100%;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -770,7 +771,7 @@ input[type=number]::-webkit-outer-spin-button {
     left: 0;
     position: absolute;
     top: 2px;
-    width: 20px
+    width: 20px;
 }
 
 .control--radio .control__indicator {
@@ -813,7 +814,7 @@ input[type=number]::-webkit-outer-spin-button {
     left: 8px;
     top: 4px;
     transform: rotate(45deg);
-    width: 3px
+    width: 5px;
 }
 
 .control--checkbox input:disabled~.control__indicator:after {
