--- a/theme/templates/email/signup_verify.html
+++ b/theme/templates/email/signup_verify.html
@@ -1,6 +1,20 @@
+{% extends "order/email_base.html" %}
 {% load i18n %}
 {% block main %}
-<p>{% trans "Hey there, thanks for creating your account." %}</p>
-<p>{% trans "Please use the link below to activate it." %}</p>
-<p><a href="http://{{ request.get_host }}{{ verify_url }}">http://{{ request.get_host }}{{ verify_url }}</a></p>
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+        <td style="color: #153643; font-family: Arial, sans-serif; font-size: 24px;">
+            {% trans "Hey there, thanks for creating your account." %}
+        </td>
+    </tr>
+    <tr>
+        <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+        	{% trans "Please use the link below to activate it." %}
+        	<a href="http://{{ request.get_host }}{{ verify_url }}">http://{{ request.get_host }}{{ verify_url }}</a>
+        </td>
+    </tr>
+</table>
+
+<p></p>
 {% endblock %}
+
