--- a/theme/templates/order/email_base.html
+++ b/theme/templates/order/email_base.html
@@ -15,7 +15,7 @@
                 <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 1px solid #cccccc; border-collapse: collapse;">
                     <tr>
                         <td align="center" style="padding: 40px 0 30px 0; color: #153643; font-size: 28px; font-weight: bold; font-family: Arial, sans-serif; border: 1px solid #cccccc;">
-                            <img src="{% static 'images/logo/hm3_mini.png' %}" alt="handmaker.top" style="display: block;" />
+                            <img src="http://{{ request.get_host }}{% static 'images/logo/hm3_mini.png' %}" alt="handmaker.top" style="display: block;" />
                         </td>
                     </tr>
                     <tr>
@@ -26,7 +26,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#ee4c50" style="padding: 30px 30px 30px 30px;">
+                        <td bgcolor="#3acf87" style="padding: 30px 30px 30px 30px;">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
                                     <td style="color: #ffffff; font-family: Arial, sans-serif; font-size: 14px;" width="75%">
