--- a/theme/templates/shop/product.html
+++ b/theme/templates/shop/product.html
@@ -36,13 +36,12 @@
 
 {% block sidebar %}
 {% if images %}
-	<div class="eight columns">
+	<div class="seven columns">
 		<div class="slider-padding">
 			<div id="product-slider" class="royalSlider rsDefault">
-			{% get_device_width as width %}
 			{% for image in images %}
-				<a href="{{ MEDIA_URL }}{% thumbnail image.file width width True 80 %}" class="mfp-gallery" title="{{product.title}}">
-					<img class="rsImg" src="{{ MEDIA_URL }}{% thumbnail image.file width width True 80 %}" 
+				<a href="{{ MEDIA_URL }}{% thumbnail image.file 0 0 True 80 %}" class="mfp-gallery" title="{{product.title}}">
+					<img class="rsImg" src="{{ MEDIA_URL }}{% thumbnail image.file 485 485 True 80 %}" 
 					data-rsTmb="{{ MEDIA_URL }}{% thumbnail image.file 96 96 True 80 %}" alt="{{ image.description }}" />
 				</a>
 			 {% endfor %}
@@ -55,7 +54,7 @@
 
 
 {% block main %}
-<div class="{% if images %}eight {% else %} fourteen {% endif %}columns">
+<div class="{% if images %}nine {% else %} fourteen {% endif %}columns">
 	<div class="product-page">
 		
 	<!-- Headline -->
